--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hossein RJ | AI Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- Hero Section -->
   <section class="text-center py-10 px-4">
     <h2 id="hero-title-en" class="text-3xl font-semibold">Welcome to My AI-Driven Portfolio</h2>
     <h2 id="hero-title-fa" class="text-3xl font-semibold hidden rtl">به پرتفولیوی هوش مصنوعی من خوش آمدید</h2>
@@ -40,14 +40,14 @@
     <p id="hero-desc-fa" class="text-gray-400 mt-3 hidden rtl">پروژه‌ها، ابزارها و تحقیقات مبتنی بر پایتون و هوش مصنوعی</p>
   </section>
 
-  <!-- Projects -->
+  <!-- Projects Section -->
   <section class="max-w-5xl mx-auto px-4 py-8">
     <h3 class="text-2xl font-semibold mb-6" id="projects-title-en">🚀 My Projects</h3>
     <h3 class="text-2xl font-semibold mb-6 hidden rtl" id="projects-title-fa">🚀 پروژه‌های من</h3>
     <div class="grid md:grid-cols-3 gap-6" id="project-container"></div>
   </section>
 
-  <!-- Fake Chat -->
+  <!-- Fake Chat Section -->
   <section class="max-w-2xl mx-auto px-4 py-8 bg-white/5 rounded-xl">
     <h3 class="text-lg font-semibold mb-4">💬 AI Chat Demo</h3>
     <div class="space-y-3">
@@ -56,7 +56,7 @@
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact Section -->
   <section class="max-w-xl mx-auto px-4 py-10 text-center">
     <h3 id="contact-title-en" class="text-2xl font-semibold mb-4">📬 Contact Me</h3>
     <h3 id="contact-title-fa" class="text-2xl font-semibold mb-4 hidden rtl">📬 تماس با من</h3>
@@ -68,13 +68,13 @@
     </form>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer Section -->
   <footer class="text-center text-gray-500 py-6 text-sm">
     <span id="footer-en">Made with ❤️ by Hossein Rajabloo</span>
     <span id="footer-fa" class="hidden rtl">ساخته‌شده با ❤️ توسط حسین رجب‌لو</span>
   </footer>
 
-  <!-- Script -->
+  <!-- Script Section -->
   <script>
     const projects = [
       { title: "CFD Simulation", desc: "Fluid flow simulation using OpenFOAM." },
