--- a/index.html
+++ b/index.html
@@ -1,106 +1,205 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="fa" dir="rtl" id="html">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hossein RJ | AI Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>فروشگاه مشابه Apple</title>
+  <!-- فونت فارسی وزیر متن -->
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       darkMode: 'class',
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ['Outfit', 'sans-serif'],
-          },
-          colors: {
-            primary: '#10b981',
-          },
-        },
-      },
-    };
+      theme: { extend: {} }
+    }
   </script>
+  <style>
+    body { font-family: 'Vazirmatn', sans-serif; }
+  </style>
 </head>
-<body class="bg-gray-900 text-white font-sans transition-all">
-  <!-- Header -->
-  <header class="p-4 flex justify-between items-center border-b border-white/10">
-    <h1 class="text-xl font-bold">Hossein RJ</h1>
-    <div class="space-x-3">
-      <button onclick="toggleDark()" class="bg-white/10 px-3 py-1 rounded">🌓</button>
-      <button onclick="switchLang('en')" class="bg-white/10 px-2 py-1 text-sm">EN</button>
-      <button onclick="switchLang('fa')" class="bg-white/10 px-2 py-1 text-sm">FA</button>
-    </div>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="text-center py-10 px-4">
-    <h2 id="hero-title-en" class="text-3xl font-semibold">Welcome to My AI-Driven Portfolio</h2>
-    <h2 id="hero-title-fa" class="text-3xl font-semibold hidden rtl">به پرتفولیوی هوش مصنوعی من خوش آمدید</h2>
-    <p id="hero-desc-en" class="text-gray-400 mt-3">Projects, tools, and research powered by Python & AI</p>
-    <p id="hero-desc-fa" class="text-gray-400 mt-3 hidden rtl">پروژه‌ها، ابزارها و تحقیقات مبتنی بر پایتون و هوش مصنوعی</p>
-  </section>
-
-  <!-- Projects Section -->
-  <section class="max-w-5xl mx-auto px-4 py-8">
-    <h3 class="text-2xl font-semibold mb-6" id="projects-title-en">🚀 My Projects</h3>
-    <h3 class="text-2xl font-semibold mb-6 hidden rtl" id="projects-title-fa">🚀 پروژه‌های من</h3>
-    <div class="grid md:grid-cols-3 gap-6" id="project-container"></div>
-  </section>
-
-  <!-- Fake Chat Section -->
-  <section class="max-w-2xl mx-auto px-4 py-8 bg-white/5 rounded-xl">
-    <h3 class="text-lg font-semibold mb-4">💬 AI Chat Demo</h3>
-    <div class="space-y-3">
-      <div class="bg-gray-800 p-3 rounded">👤 You: What is CFD?</div>
-      <div class="bg-gray-700 p-3 rounded">🤖 AI: CFD stands for Computational Fluid Dynamics...</div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="max-w-xl mx-auto px-4 py-10 text-center">
-    <h3 id="contact-title-en" class="text-2xl font-semibold mb-4">📬 Contact Me</h3>
-    <h3 id="contact-title-fa" class="text-2xl font-semibold mb-4 hidden rtl">📬 تماس با من</h3>
-    <form action="mailto:hosseinrj1994@gmail.com" method="POST" enctype="text/plain" class="space-y-4">
-      <input type="text" name="name" placeholder="Your Name" class="w-full p-2 rounded bg-white/10 text-white">
-      <input type="email" name="email" placeholder="Your Email" class="w-full p-2 rounded bg-white/10 text-white">
-      <textarea name="message" rows="4" placeholder="Your Message" class="w-full p-2 rounded bg-white/10 text-white"></textarea>
-      <button type="submit" class="bg-primary hover:bg-emerald-600 px-6 py-2 rounded">Send</button>
-    </form>
-  </section>
-
-  <!-- Footer Section -->
-  <footer class="text-center text-gray-500 py-6 text-sm">
-    <span id="footer-en">Made with ❤️ by Hossein Rajabloo</span>
-    <span id="footer-fa" class="hidden rtl">ساخته‌شده با ❤️ توسط حسین رجب‌لو</span>
-  </footer>
-
-  <!-- Script Section -->
+<body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-200 transition-colors duration-300">
+  <!-- محتوای فارسی -->
+  <div id="fa-content">
+    <!-- ناوبری -->
+    <nav class="bg-white dark:bg-gray-800 shadow-md">
+      <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+        <div class="text-2xl font-bold">اپل استور</div>
+        <ul class="hidden md:flex space-x-6">
+          <li><a href="#" class="hover:text-blue-500">محصولات</a></li>
+          <li><a href="#" class="hover:text-blue-500">جدیدترین‌ها</a></li>
+          <li><a href="#" class="hover:text-blue-500">درباره ما</a></li>
+          <li><a href="#" class="hover:text-blue-500">تماس</a></li>
+        </ul>
+        <div class="flex items-center">
+          <button class="lang-toggle px-3 py-1 bg-blue-500 text-white rounded">EN</button>
+          <button class="theme-toggle px-3 py-1 ml-2 bg-gray-200 dark:bg-gray-700 dark:text-gray-200 rounded">🌓</button>
+          <button class="md:hidden menu-toggle ml-4 text-2xl">☰</button>
+        </div>
+      </div>
+      <!-- منوی موبایل -->
+      <ul class="hidden mobile-menu flex-col bg-white dark:bg-gray-800 px-4 py-2 space-y-2 md:hidden">
+        <li><a href="#" class="block hover:text-blue-500">محصولات</a></li>
+        <li><a href="#" class="block hover:text-blue-500">جدیدترین‌ها</a></li>
+        <li><a href="#" class="block hover:text-blue-500">درباره ما</a></li>
+        <li><a href="#" class="block hover:text-blue-500">تماس</a></li>
+      </ul>
+    </nav>
+    <!-- معرفی -->
+    <section class="bg-gray-100 dark:bg-gray-800 text-center py-12">
+      <h1 class="text-4xl font-bold mb-4">فروشگاه محصولات اپل</h1>
+      <p class="text-lg">به فروشگاه رسمی اپل خوش آمدید. محصولات ما را بررسی کنید!</p>
+    </section>
+    <!-- اصلی (کارت محصولات + سایدبار) -->
+    <section class="container mx-auto mt-8 px-4 md:flex">
+      <!-- سایدبار دسته‌بندی -->
+      <aside class="w-full md:w-1/4 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg mb-6 md:mb-0">
+        <h2 class="font-semibold mb-4">دسته‌بندی‌ها</h2>
+        <ul>
+          <li><a href="#" class="block py-2 hover:underline">گوشی</a></li>
+          <li><a href="#" class="block py-2 hover:underline">تبلت</a></li>
+          <li><a href="#" class="block py-2 hover:underline">لپ‌تاپ</a></li>
+          <li><a href="#" class="block py-2 hover:underline">ساعت</a></li>
+        </ul>
+      </aside>
+      <!-- کارت‌های محصولات -->
+      <main class="w-full md:w-3/4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <!-- کارت 1 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+          <img src="https://via.placeholder.com/400" alt="محصول 1" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">محصول ۱</h3>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">توضیحات کوتاه محصول شماره یک...</p>
+            <span class="text-lg font-semibold">قیمت: ۱۰۰۰ تومان</span>
+          </div>
+        </div>
+        <!-- کارت 2 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+          <img src="https://via.placeholder.com/400" alt="محصول 2" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">محصول ۲</h3>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">توضیحات کوتاه محصول شماره دو...</p>
+            <span class="text-lg font-semibold">قیمت: ۲۰۰۰ تومان</span>
+          </div>
+        </div>
+        <!-- کارت 3 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+          <img src="https://via.placeholder.com/400" alt="محصول 3" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">محصول ۳</h3>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">توضیحات کوتاه محصول شماره سه...</p>
+            <span class="text-lg font-semibold">قیمت: ۱۵۰۰ تومان</span>
+          </div>
+        </div>
+        <!-- می‌توانید کارت‌های بیشتری اضافه کنید -->
+      </main>
+    </section>
+  </div>
+  <!-- محتوای انگلیسی -->
+  <div id="en-content" class="hidden">
+    <!-- Navbar in English -->
+    <nav class="bg-white dark:bg-gray-800 shadow-md">
+      <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+        <div class="text-2xl font-bold">Apple Store</div>
+        <ul class="hidden md:flex space-x-6">
+          <li><a href="#" class="hover:text-blue-500">Products</a></li>
+          <li><a href="#" class="hover:text-blue-500">New Arrivals</a></li>
+          <li><a href="#" class="hover:text-blue-500">About Us</a></li>
+          <li><a href="#" class="hover:text-blue-500">Contact</a></li>
+        </ul>
+        <div class="flex items-center">
+          <button class="lang-toggle px-3 py-1 bg-blue-500 text-white rounded">FA</button>
+          <button class="theme-toggle px-3 py-1 ml-2 bg-gray-200 dark:bg-gray-700 dark:text-gray-200 rounded">🌓</button>
+          <button class="md:hidden menu-toggle ml-4 text-2xl">☰</button>
+        </div>
+      </div>
+      <ul class="hidden mobile-menu flex-col bg-white dark:bg-gray-800 px-4 py-2 space-y-2 md:hidden">
+        <li><a href="#" class="block hover:text-blue-500">Products</a></li>
+        <li><a href="#" class="block hover:text-blue-500">New Arrivals</a></li>
+        <li><a href="#" class="block hover:text-blue-500">About Us</a></li>
+        <li><a href="#" class="block hover:text-blue-500">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- Introduction -->
+    <section class="bg-gray-100 dark:bg-gray-800 text-center py-12">
+      <h1 class="text-4xl font-bold mb-4">Apple Product Store</h1>
+      <p class="text-lg">Welcome to the official Apple store. Check out our products!</p>
+    </section>
+    <!-- Main (Products + Sidebar) -->
+    <section class="container mx-auto mt-8 px-4 md:flex">
+      <aside class="w-full md:w-1/4 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg mb-6 md:mb-0">
+        <h2 class="font-semibold mb-4">Categories</h2>
+        <ul>
+          <li><a href="#" class="block py-2 hover:underline">Phone</a></li>
+          <li><a href="#" class="block py-2 hover:underline">Tablet</a></li>
+          <li><a href="#" class="block py-2 hover:underline">Laptop</a></li>
+          <li><a href="#" class="block py-2 hover:underline">Watch</a></li>
+        </ul>
+      </aside>
+      <main class="w-full md:w-3/4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <!-- Card 1 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+          <img src="https://via.placeholder.com/400" alt="Product 1" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Product 1</h3>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">Short description of product one...</p>
+            <span class="text-lg font-semibold">$1000</span>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+          <img src="https://via.placeholder.com/400" alt="Product 2" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Product 2</h3>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">Short description of product two...</p>
+            <span class="text-lg font-semibold">$2000</span>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+          <img src="https://via.placeholder.com/400" alt="Product 3" class="w-full h-48 object-cover">
+          <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Product 3</h3>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">Short description of product three...</p>
+            <span class="text-lg font-semibold">$1500</span>
+          </div>
+        </div>
+      </main>
+    </section>
+  </div>
+  <!-- JavaScript for toggles -->
   <script>
-    const projects = [
-      { title: "CFD Simulation", desc: "Fluid flow simulation using OpenFOAM." },
-      { title: "AI Chatbot", desc: "Natural language chatbot with Python." },
-      { title: "Data Visualizer", desc: "Plot scientific data dynamically." }
-    ];
-    const container = document.getElementById('project-container');
-    projects.forEach(proj => {
-      const card = document.createElement('div');
-      card.className = "bg-white/5 p-4 rounded-xl shadow hover:shadow-xl transition";
-      card.innerHTML = `<h4 class='font-bold text-lg mb-2'>${proj.title}</h4><p class='text-gray-300 text-sm'>${proj.desc}</p>`;
-      container.appendChild(card);
+    document.querySelectorAll('.theme-toggle').forEach(btn => {
+      btn.addEventListener('click', () => {
+        document.documentElement.classList.toggle('dark');
+      });
     });
-
-    function toggleDark() {
-      document.documentElement.classList.toggle('dark');
-    }
-
-    function switchLang(lang) {
-      document.documentElement.lang = lang;
-      const all = document.querySelectorAll('[id*="-en"], [id*="-fa"]');
-      all.forEach(el => el.classList.add('hidden'));
-      const visible = document.querySelectorAll(`[id*="-${lang}"]`);
-      visible.forEach(el => el.classList.remove('hidden'));
-      document.body.classList.toggle('rtl', lang === 'fa');
-    }
+    document.querySelectorAll('.lang-toggle').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const html = document.documentElement;
+        const faContent = document.getElementById('fa-content');
+        const enContent = document.getElementById('en-content');
+        if (faContent.classList.contains('hidden')) {
+          // Switch to Persian
+          enContent.classList.add('hidden');
+          faContent.classList.remove('hidden');
+          html.dir = 'rtl';
+          html.lang = 'fa';
+        } else {
+          // Switch to English
+          faContent.classList.add('hidden');
+          enContent.classList.remove('hidden');
+          html.dir = 'ltr';
+          html.lang = 'en';
+        }
+      });
+    });
+    document.querySelectorAll('.menu-toggle').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const parentNav = btn.closest('nav');
+        parentNav.querySelector('.mobile-menu').classList.toggle('hidden');
+      });
+    });
   </script>
 </body>
 </html>
